--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <a class="nav-link" href="Newsletter/newsletter.html">Newsletter</a>
                     </li>
                     <li class="nav-item nav-link-edits">
-                        <a class="nav-link" href="conference">Conference</a>
+                        <a class="nav-link" href="onference/index.html">Conference</a>
                     </li>
                 </ul>
             </div>
